# kts-backend-base-template

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.secrets.yaml  main.py  pyproject.toml
.cursor/commands/: backend-add-api-endpoint-rest.md  backend-add-crud-resource.md  backend-add-migration-safe.md  backend-add-tests-api-contract.md  backend-auth-guard-context.md  backend-http-errors-openapi.md
.cursor/rules/: backend-add-api-endpoint.mdc  backend-domain-accessor-manager.mdc  backend-http-errors.mdc  backend-main.mdc  backend-migrations.mdc  backend-testing.mdc  backend-uv.mdc
.cursor/skills/backend-add-api-endpoint-rest/: SKILL.md
.cursor/skills/backend-add-api-endpoint-rest/agents/: openai.yaml
.cursor/skills/backend-add-crud-resource/: SKILL.md
.cursor/skills/backend-add-crud-resource/agents/: openai.yaml
.cursor/skills/backend-add-migration-safe/: SKILL.md
.cursor/skills/backend-add-migration-safe/agents/: openai.yaml
.cursor/skills/backend-add-tests-api-contract/: SKILL.md
.cursor/skills/backend-add-tests-api-contract/agents/: openai.yaml
.cursor/skills/backend-auth-guard-context/: SKILL.md
.cursor/skills/backend-auth-guard-context/agents/: openai.yaml
.cursor/skills/backend-http-errors-openapi/: SKILL.md
.cursor/skills/backend-http-errors-openapi/agents/: openai.yaml
app/: API.md
app/core/: config.py  db.py  schemas.py  store.py  validators.py
app/core/models/migrations/: env.py
app/users/: accessor.py  domain.py  models.py  schemas.py  urls.py  views.py
app/web/: plugins.py
(+1 files in other folders)
